# slam_book_exemples

./: README.md
bundle_classic/: CMakeLists.txt
bundle_classic/src/: bundle_adjustment_g2o.cpp
bundle_pose_graph/: CMakeLists.txt
bundle_pose_graph/src/: pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ch10/: CMakeLists.txt
ch10/src/: pose_graph_g2o_SE3.cpp
ch2/: CMakeLists.txt
ch3/: CMakeLists.txt
ch3/src/useEigen/: CMakeLists.txt
ch4/: CMakeLists.txt
ch4/src/: useSophus.cpp
ch4/src/example/: CMakeLists.txt
ch5/src/imageBasics/: imageBasics.cpp
ch5/src/rgbd/: joinMap.cpp
ch6/: CMakeLists.txt
ch7/src/: pose_estimation_3d2d.cpp
ch9/src/: bundle_adjustment_g2o.cpp
hello_world/src/: helloSLAM2.cpp
imaging_basics/: CMakeLists.txt
imaging_basics/src/imageBasics/: undistortImage.cpp
imaging_basics/src/rgbd/: CMakeLists.txt
imaging_basics/src/stereo/: stereoVision.cpp
lib_eigen/: CMakeLists.txt
lib_eigen/src/examples/: CMakeLists.txt  plotTrajectory.cpp
lib_eigen/src/useEigen/: eigenMatrix.cpp
lib_eigen/src/useGeometry/: CMakeLists.txt
lib_eigen/src/visualizeGeometry/: CMakeLists.txt
optimization/src/: ceresCurveFitting.cpp  g2oCurveFitting.cpp
pnp_pose_estimation/: CMakeLists.txt  CMakeLists.txt.old
pnp_pose_estimation/src/: pose_estimation_3d2d.cpp
sophus/src/example/: trajectoryError.cpp
